[B]Version 0.1.6[/B]
- Favorites >> ( TV | Movie ) -- Addition of database ID for TV side of things and empty placeholder for Movie.
- TV >> Season -- Displayed Label Coloring.
- TV >> Season >> Episode -- Plot / Description / Overview of the Episode (not show)
- TV >> Season >> Episode -- Displayed Label Coloring.
- TV >> Season >> Episode -- Check to make sure the TheTVDB image is actually there and not a 404.
- TV >> Season >> Episode -- Episode Name Fix via TheTVDB data for those episodes without names on solarmovie.so.
- TV >> Season >> Episode -- Episode Screenshots.
- TV >> Season >> Episode -- Fanart and Poster / Thumbnail.
- TV >> Season -- Fanart and Poster / Thumbnail.
- Slight fix to allow for parsing out text [CODES] and year out of Title passed to plugin for AirDate Searches.
- Slight fix for Poster / Thumbnail - Image for TV Show Listings without one on solarmovie.so.
- Labeling for Favorites.
- Favorites >> Movie >> Working: ( Empty | Add | List ) | Untested: ( Remove ).
- Favorites >> Movie >> Working: ( Empty )
- Favorites >> TV >> Working: ( Empty | Add | List ) | Untested: ( Remove ). I still need to cleanup the code a bit on all of it.
- Adding Favorites Feature.
- Some slight fixes for the Search Feature, as well as for ContextMenuItems for searching with 1Channel/Primewire.
- Notification methods: sunNote() for good news, deadNote() for bad news.  Decided to use the nice sun image and colored text for good news and the deadplanet (astriod) for bad news.
- The config.py file has been filled up with tons of stuff, yet I'm too tired or I would try to finish filling it some more.
- Added more first letter-coloring.
- Added some of the color scheming to the config.py for easier changing.
- Movied Change Log and News paths to the config.py.
### For TV Shows
if os.path.exists(xbmc.translatePath("special://home/addons/") + 'plugin.video.solarmovie.so'):