@@ -66,6 +66,10 @@ def ps(x):
 		,'cMI.favorites.tv.add.name': 		'Favorites - Add'
 		,'cMI.favorites.tv.add.mode': 		'FavoritesAdd'
 		,'cMI.favorites.movie.add.url': 	'XBMC.RunPlugin(%s?mode=%s&section=%s&title=%s&year=%s&img=%s&fanart=%s&country=%s&plot=%s&genre=%s&url=%s)'
+		,'cMI.favorites.tv.remove.url': 	'XBMC.RunPlugin(%s?mode=%s&section=%s&title=%s&year=%s&img=%s&fanart=%s&country=%s&plot=%s&genre=%s&url=%s&dbid=%s)'
+		,'cMI.favorites.tv.remove.name': 	'Favorites - Remove'
+		,'cMI.favorites.tv.remove.mode': 	'FavoritesRemove'
+		,'cMI.favorites.movie.remove.url': 'XBMC.RunPlugin(%s?mode=%s&section=%s&title=%s&year=%s&img=%s&fanart=%s&country=%s&plot=%s&genre=%s&url=%s)'
 		,'cMI.airdates.find.name': 				'Find AirDates'
 		,'cMI.airdates.find.url': 				'XBMC.RunPlugin(%s?mode=%s&title=%s)'
 		,'cMI.airdates.find.mode': 				'SearchForAirDates'
