@@ -1,7 +1,13 @@
 
 
-[COLOR grey][Date: 2013.07.31][/COLOR][COLOR black][Post: 3][/COLOR]
-[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.1.7
+[COLOR grey][Date: 2013.07.31][/COLOR][COLOR black][Post: 6][/COLOR]
+[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.1.8
+
+[COLOR grey][Date: 2013.07.31][/COLOR][COLOR black][Post: 5][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.1.7
+
+[COLOR grey][Date: 2013.07.31][/COLOR][COLOR black][Post: 4][/COLOR]
+[COLOR red][B]News:[/B][/COLOR]  Added Remove command for Favorites.
 
 [COLOR grey][Date: 2013.07.31][/COLOR][COLOR black][Post: 2][/COLOR]
 [COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.1.6
